--- a/src/Windows/MainWindow.form
+++ b/src/Windows/MainWindow.form
@@ -25,7 +25,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jlp_jour" alignment="1" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="jlp_nuit" alignment="0" pref="806" max="32767" attributes="0"/>
+              <Component id="jlp_nuit" alignment="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
